--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,4 @@
-server:
-  port: 8080
-
-
 spring:
-  profiles:
-    active: '@spring.profile@'
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     #druid相关配置
@@ -13,9 +7,9 @@ spring:
       filters: stat
       driver-class-name: com.mysql.jdbc.Driver
       #基本属性
-      url: jdbc:mysql://localhost:3306/wework?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+      url: jdbc:mysql://rm-2ze0k88648b51xajvro.mysql.rds.aliyuncs.com:3306/wework?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
       username: root
-      password: lfy1224
+      password: Sh@nghai
       #配置初始化大小/最小/最大
       initial-size: 1
       min-idle: 1
@@ -33,21 +27,3 @@ spring:
       #打开PSCache，并指定每个连接上PSCache的大小。oracle设为true，mysql设为false。分库分表较多推荐设置为false
       pool-prepared-statements: false
       max-pool-prepared-statement-per-connection-size: 20
-  mvc:
-    view:
-      prefix: /WEB-INF/jsp/
-      suffix: .jsp
-
-
-
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.example.wework.model
-
-#pagehelper
-pagehelper:
-    helperDialect: mysql
-    reasonable: true
-    supportMethodsArguments: true
-    params: count=countSql
-    returnPageInfo: check
