--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <version>3.4</version>
         </dependency>
 
+        <!-- 邮件 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <!-- 邮件 -->
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
